--- a/Caracossam.html
+++ b/Caracossam.html
@@ -18,10 +18,10 @@
 	<style>
 		body, html {
 			height:100%;
-			font-family:monospace;
+			font-family:Georgia;
 			line-height:1.5em;
 			font-weight:300;
-			background-color:white;
+			background-color:FloralWhite;
 			color: black;
 			text-rendering:geometricPrecision;
 			margin:0;
@@ -32,9 +32,12 @@
 			position:relative;
 		}
 		#navigation {
-			background-color:white;
+			background-color:BurlyWood;
 			display:inline-block;
-			border-right:1px dashed black;
+			border-top:9px double FireBrick;
+			border-bottom:9px dotted FireBrick;
+			border-right:3px dotted FireBrick;
+			border-left:3px dotted FireBrick;
 			padding-right:65px;
 			padding-top:65px;
 			padding-left:25px;
@@ -59,14 +62,14 @@
 		}
 		#navigation a {
 			text-decoration:none;
-			color:black;
+			color:FireBrick;
 		}
 		#navigation strong {
 			color:black;
 			font-weight:400;
 		}
 		#navigation a:hover {
-			text-decoration:underline;
+			text-decoration:underline overline;
 		}
 		#content h1:nth-child(1) {
 			margin-top:5px;
@@ -80,14 +83,14 @@
 			margin-top: 5px;
 		}
 		#content a {
-			color:black;
-			text-decoration: underline;
-		}
-		#content a:hover {
+			color:GoldenRod;
 			text-decoration: none;
 		}
+		#content a:hover {
+			text-decoration: underline overline;
+		}
 		#content a:active {
-			text-decoration: underline;
+			text-decoration: underline overline;
 		}
 		#content strike {
 			color: black;
@@ -149,26 +152,25 @@
 <li><a href="./Account_of_the_Mortal_Races.html" title="Account of the Mortal Races" class="page">Account of the Mortal Races</a></li>
 <li><a href="./Arcanva_Dale.html" title="Arcanva Dale" class="page">Arcanva Dale</a></li>
 <li><a href="./Black_Metal_Berserkers.html" title="Black Metal Berserkers" class="page">Black Metal Berserkers</a></li>
+<li><a href="./Brass_Guard.html" title="Brass Guard" class="page">Brass Guard</a></li>
 <li><a href="./Calendars,_Chronologies,_and_Cosmology.html" title="Calendars, Chronologies, and Cosmology" class="page">Calendars, Chronologies, and Cosmology</a></li>
 <li><b>Caracossam</b></li>
-<li><a href="./Conqueror's_Road.html" title="Conqueror's Road" class="page">Conqueror's Road</a></li>
 <li><a href="./Council_of_Ancients_and_Elders.html" title="Council of Ancients and Elders" class="page">Council of Ancients and Elders</a></li>
-<li><a href="./Demogorr.html" title="Demogorr" class="page">Demogorr</a></li>
 <li><a href="./Dopesmoker_Thunderbrought.html" title="Dopesmoker Thunderbrought" class="page">Dopesmoker Thunderbrought</a></li>
 <li><a href="./Dopethrone.html" title="Dopethrone" class="page">Dopethrone</a></li>
-<li><a href="./Dragons.html" title="Dragons" class="page">Dragons</a></li>
+<li><a href="./Dragon.html" title="Dragon" class="page">Dragon</a></li>
 <li><a href="./Duke_of_the_Dales.html" title="Duke of the Dales" class="page">Duke of the Dales</a></li>
-<li><a href="./Goblinoids.html" title="Goblinoids" class="page">Goblinoids</a></li>
-<li><a href="./Great_Dale.html" title="Great Dale" class="page">Great Dale</a></li>
+<li><a href="./Elemental_Chaos.html" title="Elemental Chaos" class="page">Elemental Chaos</a></li>
 <li><a href="./Happenings_and_Histories.html" title="Happenings and Histories" class="page">Happenings and Histories</a></li>
-<li><a href="./Immortals_and_Infernus_Arcanva.html" title="Immortals and Infernus Arcanva" class="page">Immortals and Infernus Arcanva</a></li>
+<li><a href="./Immortal.html" title="Immortal" class="page">Immortal</a></li>
+<li><a href="./Immortality_and_Infernus_Arcanva.html" title="Immortality and Infernus Arcanva" class="page">Immortality and Infernus Arcanva</a></li>
 <li><a href="./Infernus_Arcanva.html" title="Infernus Arcanva" class="page">Infernus Arcanva</a></li>
 <li><a href="./Jakarry.html" title="Jakarry" class="page">Jakarry</a></li>
+<li><a href="./Jao_Hong.html" title="Jao Hong" class="page">Jao Hong</a></li>
 <li><a href="./Lay_of_the_Land_of_Scales.html" title="Lay of the Land of Scales" class="page">Lay of the Land of Scales</a></li>
 <li><a href="./Magnificent_Hassan.html" title="Magnificent Hassan" class="page">Magnificent Hassan</a></li>
 <li><a href="./Memories,_Motives,_and_Missions.html" title="Memories, Motives, and Missions" class="page">Memories, Motives, and Missions</a></li>
 <li><a href="./Mercenary_Kingdoms.html" title="Mercenary Kingdoms" class="page">Mercenary Kingdoms</a></li>
-<li><a href="./Merchant_Marine.html" title="Merchant Marine" class="page">Merchant Marine</a></li>
 <li><a href="./Myth_and_Minutiae.html" title="Myth and Minutiae" class="page">Myth and Minutiae</a></li>
 <li><a href="./Orcus.html" title="Orcus" class="page">Orcus</a></li>
 <li><a href="./Overdale.html" title="Overdale" class="page">Overdale</a></li>
@@ -176,24 +178,22 @@
 <li><a href="./Prime_Material.html" title="Prime Material" class="page">Prime Material</a></li>
 <li><a href="./Prohibitions_and_Proscriptions.html" title="Prohibitions and Proscriptions" class="page">Prohibitions and Proscriptions</a></li>
 <li><a href="./Queen_Serpentine.html" title="Queen Serpentine" class="page">Queen Serpentine</a></li>
+<li><a href="./Sacrilex.html" title="Sacrilex" class="page">Sacrilex</a></li>
+<li><a href="./Sentimentalos.html" title="Sentimentalos" class="page">Sentimentalos</a></li>
 <li><a href="./Setting_Suns_Warband.html" title="Setting Suns Warband" class="page">Setting Suns Warband</a></li>
-<li><a href="./Shadow_by_the_Boughs.html" title="Shadow by the Boughs" class="page">Shadow by the Boughs</a></li>
-<li><a href="./Shining_on_the_Sea.html" title="Shining on the Sea" class="page">Shining on the Sea</a></li>
 <li><a href="./Subterrania_and_the_Deep_Dark.html" title="Subterrania and the Deep Dark" class="page">Subterrania and the Deep Dark</a></li>
 <li><a href="./The_Arcanvan_Aeon.html" title="The Arcanvan Aeon" class="page">The Arcanvan Aeon</a></li>
-<li><a href="./The_Astral_Sea.html" title="The Astral Sea" class="page">The Astral Sea</a></li>
 <li><a href="./The_Balewoods.html" title="The Balewoods" class="page">The Balewoods</a></li>
 <li><a href="./The_Bleed.html" title="The Bleed" class="page">The Bleed</a></li>
 <li><a href="./The_Electric_Wizard.html" title="The Electric Wizard" class="page">The Electric Wizard</a></li>
+<li><a href="./The_Hassanian_Heresy.html" title="The Hassanian Heresy" class="page">The Hassanian Heresy</a></li>
 <li><a href="./The_Haze.html" title="The Haze" class="page">The Haze</a></li>
+<li><a href="./The_Longest_Night.html" title="The Longest Night" class="page">The Longest Night</a></li>
 <li><a href="./Tholdas_Moonbow.html" title="Tholdas Moonbow" class="page">Tholdas Moonbow</a></li>
-<li><a href="./Thunderous_Shore.html" title="Thunderous Shore" class="page">Thunderous Shore</a></li>
 <li><a href="./Towering_Terminole.html" title="Towering Terminole" class="page">Towering Terminole</a></li>
 <li><a href="./Triumvirate_of_Paragons.html" title="Triumvirate of Paragons" class="page">Triumvirate of Paragons</a></li>
 <li><a href="./Underdale.html" title="Underdale" class="page">Underdale</a></li>
-<li><a href="./Walmarie.html" title="Walmarie" class="page">Walmarie</a></li>
-<li><a href="./Warforged.html" title="Warforged" class="page">Warforged</a></li>
-<li><a href="./Zhin_Zhis.html" title="Zhin Zhis" class="page">Zhin Zhis</a></li>
+<li><a href="./Underseers.html" title="Underseers" class="page">Underseers</a></li>
 </ul>
  </div>
 		<div id="content">
@@ -216,11 +216,11 @@ From East to West, the major spires are Highstriver near the <a href="./The_Blee
 </p>
 
 <p>
-The population of Caracossam is made up firstly of giants who historically were the ruling race until equalization measures imposed after <a href="./Infernus_Arcanva.html" title="Infernus Arcanva" class="page">Infernus Arcanva</a> uplifted the dwarves, the second most populous race in Caracossam, from slave race to second-class citizens. Giants and dwarves are the trend but many other races are able to carve out a niche within the realm of Caracossam such as humans, warforged, duergar, gnomes, halflings, goliaths, tieflings, genasi, <a href="./Dragons.html" title="dragonkin" class="page">dragonkin</a>, kenku, thri'kreen, and <a href="./Goblinoids.html" title="goblinoids" class="page">goblinoids</a> of all kinds. Numerous generations of <a href="./Warforged.html" title="warforged" class="page">warforged</a> were crafted by the dwarves before the technology was lost and many survive to the present even though a fraction are not fully intact, mentally or physically. Duergar, gnomes, and halflings naturally arise as subraces of dwarves, though tend to be uncommon outside of their home regions. Goliaths are well-tolerated as a giant subrace but many face a stigma for being what is seen as a lesser version of the larger giants. Kenku and thri'kreen thrive in the sparse wilds of Caracossam, and even have racial enclaves amongst most larger settlements. Ogres manage well in such a violent land, as do minotaurs and gnolls, regardless of how civilized they are. Upper Caracossam is home to most of these races, while Lesser Caracossam tends more toward dwarven and giant races and Greater Caracossam is given more toward humans, monstroids, and goblinoids. Lower Caracossam is dominated by dwarves and is devoid of giants save those junctions between surface and subterrane. 
+The population of Caracossam is made up firstly of giants who historically were the ruling race until equalization measures imposed after <a href="./Infernus_Arcanva.html" title="Infernus Arcanva" class="page">Infernus Arcanva</a> uplifted the dwarves, the second most populous race in Caracossam, from slave race to second-class citizens. Giants and dwarves are the trend but many other races are able to carve out a niche within the realm of Caracossam such as humans, warforged, duergar, gnomes, halflings, goliaths, tieflings, genasi, <a href="./Dragon.html" title="dragonkin" class="page">dragonkin</a>, kenku, thri'kreen, and goblinoids of all kinds. Numerous generations of warforged were crafted by the dwarves before the technology was lost and many survive to the present even though a fraction are not fully intact, mentally or physically. Duergar, gnomes, and halflings naturally arise as subraces of dwarves, though tend to be uncommon outside of their home regions. Goliaths are well-tolerated as a giant subrace but many face a stigma for being what is seen as a lesser version of the larger giants. Kenku and thri'kreen thrive in the sparse wilds of Caracossam, and even have racial enclaves amongst most larger settlements. Ogres manage well in such a violent land, as do minotaurs and gnolls, regardless of how civilized they are. Upper Caracossam is home to most of these races, while Lesser Caracossam tends more toward dwarven and giant races and Greater Caracossam is given more toward humans, monstroids, and goblinoids. Lower Caracossam is dominated by dwarves and is devoid of giants save those junctions between surface and subterrane. 
 </p>
 
 <p>
-Overall, the peoples of Caracossam are rigidly and clearly divided along broad racial lines. The tallest and largest races, meaning giants, lord power over the lesser races to a large extent, but the numbers of giants have been kept in check by the survival instincts of the other races. In the past the racial divides were the source of constant racial wars as the predations of the giants had driven many other races into brutal slavery conditions. The arrival of Infernus Arcanva was a catalyst to change, as he taught the dwarves higher magical arts than had ever been known before and that eventually gave them the power to overthrow the giants. Caracossam eventually reached equilibrium as the other races grew strong enough to contend with the giants, with the peoples forming up into their independent claims and occasionally falling under unified rule. Still, the giants generally continue to control the uplands and the more violent locales, while the underground belongs squarely to the dwarves who pay lip service to the Dopesmoker as tradition mandates. Most of Caracossam's aggression is now dispersed outwardly against the warriors of the <a href="./Mercenary_Kingdoms.html" title="Mercenary Kingdoms" class="page">Mercenary Kingdoms</a> and soldiers from <a href="./Conqueror's_Road.html" title="Conqueror's Road" class="page">Conqueror's Road</a>, the latter of whom is due for a cataclysmic invasion from the fully-mustered might of all Caracossam. For millenia the giants have seen the gigantic state-city as something that rightfully could belong only to them, but such is a mistake that history has yet to see rectified. 
+Overall, the peoples of Caracossam are rigidly and clearly divided along broad racial lines. The tallest and largest races, meaning giants, lord power over the lesser races to a large extent, but the numbers of giants have been kept in check by the survival instincts of the other races. In the past the racial divides were the source of constant racial wars as the predations of the giants had driven many other races into brutal slavery conditions. The arrival of Infernus Arcanva was a catalyst to change, as he taught the dwarves higher magical arts than had ever been known before and that eventually gave them the power to overthrow the giants. Caracossam eventually reached equilibrium as the other races grew strong enough to contend with the giants, with the peoples forming up into their independent claims and occasionally falling under unified rule. Still, the giants generally continue to control the uplands and the more violent locales, while the underground belongs squarely to the dwarves who pay lip service to the Dopesmoker as tradition mandates. Most of Caracossam's aggression is now dispersed outwardly against the warriors of the <a href="./Mercenary_Kingdoms.html" title="Mercenary Kingdoms" class="page">Mercenary Kingdoms</a> and soldiers from <a href="./Lay_of_the_Land_of_Scales/Conqueror's_Road.html" title="Lay of the Land of Scales:Conqueror's Road" class="page">Lay of the Land of Scales:Conqueror's Road</a>, the latter of whom is due for a cataclysmic invasion from the fully-mustered might of all Caracossam. For millenia the giants have seen the gigantic state-city as something that rightfully could belong only to them, but such is a mistake that history has yet to see rectified. 
 </p>
 
 <p>
@@ -242,7 +242,7 @@ Infernus Arcanva didn't overthrow the giants, but he was no fan. When one of Dop
 
 <p>
 <div style='padding-left: 30pt'>
-The dwarves after their uplifting experienced a <a href="./The_Arcanvan_Aeon.html" title="golden age" class="page">golden age</a> alongside the one occurring in Conqueror's Road under Infernus' guidance. Numerous claims were carved <a href="./Subterrania_and_the_Deep_Dark.html" title="beneath the surface of the earth" class="page">beneath the surface of the earth</a>, like the magnificent underground metropolis of Orres Olt. There were grand roads linking all the claims of Caracossam and spanning the continent, with one to the South of the <a href="./Great_Dale.html" title="Great Dale" class="page">Great Dale</a>, one to Conqueror's Road below the <a href="./The_Balewoods.html" title="Balewoods" class="page">Balewoods</a>, and an arduous trek of pilgrimage far away to <a href="./Arcanva_Dale.html" title="Arcanva Dale" class="page">Arcanva Dale</a>. The dwarves, unfortunately, dug too deep, and much of their glory was swallowed by the earth. 
+The dwarves after their uplifting experienced a <a href="./The_Arcanvan_Aeon.html" title="golden age" class="page">golden age</a> alongside the one occurring in Conqueror's Road under Infernus' guidance. Numerous claims were carved <a href="./Subterrania_and_the_Deep_Dark.html" title="beneath the surface of the earth" class="page">beneath the surface of the earth</a>, like the magnificent underground metropolis of Orres Olt. There were grand roads linking all the claims of Caracossam and spanning the continent, with one to the South of the <a href="./Lay_of_the_Land_of_Scales/Great_Dale.html" title="Lay of the Land of Scales:Great Dale" class="page">Lay of the Land of Scales:Great Dale</a>, one to Conqueror's Road below the <a href="./The_Balewoods.html" title="Balewoods" class="page">Balewoods</a>, and an arduous trek of pilgrimage far away to <a href="./Arcanva_Dale.html" title="Arcanva Dale" class="page">Arcanva Dale</a>. The dwarves, unfortunately, dug too deep, and much of their glory was swallowed by the earth. 
 </div>
 </p>
 
@@ -263,7 +263,7 @@ The majority of plants grow poorly in Caracossam if they grow at all, with one e
 			<span class="backlinks">
 				<hr class='footnotes'>
 				<b>Backlinks:</b>
-				<a href='./Great_Dale.html'>Great Dale</a>
+				<a href='./Lay_of_the_Land_of_Scales/Great_Dale.html'>Lay of the Land of Scales:Great Dale</a>
 				<br /><br />
 			</span>
 
