--- a/Prime_Material.html
+++ b/Prime_Material.html
@@ -18,10 +18,10 @@
 	<style>
 		body, html {
 			height:100%;
-			font-family:monospace;
+			font-family:Georgia;
 			line-height:1.5em;
 			font-weight:300;
-			background-color:white;
+			background-color:FloralWhite;
 			color: black;
 			text-rendering:geometricPrecision;
 			margin:0;
@@ -32,9 +32,12 @@
 			position:relative;
 		}
 		#navigation {
-			background-color:white;
+			background-color:BurlyWood;
 			display:inline-block;
-			border-right:1px dashed black;
+			border-top:9px double FireBrick;
+			border-bottom:9px dotted FireBrick;
+			border-right:3px dotted FireBrick;
+			border-left:3px dotted FireBrick;
 			padding-right:65px;
 			padding-top:65px;
 			padding-left:25px;
@@ -59,14 +62,14 @@
 		}
 		#navigation a {
 			text-decoration:none;
-			color:black;
+			color:FireBrick;
 		}
 		#navigation strong {
 			color:black;
 			font-weight:400;
 		}
 		#navigation a:hover {
-			text-decoration:underline;
+			text-decoration:underline overline;
 		}
 		#content h1:nth-child(1) {
 			margin-top:5px;
@@ -80,14 +83,14 @@
 			margin-top: 5px;
 		}
 		#content a {
-			color:black;
-			text-decoration: underline;
-		}
-		#content a:hover {
+			color:GoldenRod;
 			text-decoration: none;
 		}
+		#content a:hover {
+			text-decoration: underline overline;
+		}
 		#content a:active {
-			text-decoration: underline;
+			text-decoration: underline overline;
 		}
 		#content strike {
 			color: black;
@@ -149,26 +152,25 @@
 <li><a href="./Account_of_the_Mortal_Races.html" title="Account of the Mortal Races" class="page">Account of the Mortal Races</a></li>
 <li><a href="./Arcanva_Dale.html" title="Arcanva Dale" class="page">Arcanva Dale</a></li>
 <li><a href="./Black_Metal_Berserkers.html" title="Black Metal Berserkers" class="page">Black Metal Berserkers</a></li>
+<li><a href="./Brass_Guard.html" title="Brass Guard" class="page">Brass Guard</a></li>
 <li><a href="./Calendars,_Chronologies,_and_Cosmology.html" title="Calendars, Chronologies, and Cosmology" class="page">Calendars, Chronologies, and Cosmology</a></li>
 <li><a href="./Caracossam.html" title="Caracossam" class="page">Caracossam</a></li>
-<li><a href="./Conqueror's_Road.html" title="Conqueror's Road" class="page">Conqueror's Road</a></li>
 <li><a href="./Council_of_Ancients_and_Elders.html" title="Council of Ancients and Elders" class="page">Council of Ancients and Elders</a></li>
-<li><a href="./Demogorr.html" title="Demogorr" class="page">Demogorr</a></li>
 <li><a href="./Dopesmoker_Thunderbrought.html" title="Dopesmoker Thunderbrought" class="page">Dopesmoker Thunderbrought</a></li>
 <li><a href="./Dopethrone.html" title="Dopethrone" class="page">Dopethrone</a></li>
-<li><a href="./Dragons.html" title="Dragons" class="page">Dragons</a></li>
+<li><a href="./Dragon.html" title="Dragon" class="page">Dragon</a></li>
 <li><a href="./Duke_of_the_Dales.html" title="Duke of the Dales" class="page">Duke of the Dales</a></li>
-<li><a href="./Goblinoids.html" title="Goblinoids" class="page">Goblinoids</a></li>
-<li><a href="./Great_Dale.html" title="Great Dale" class="page">Great Dale</a></li>
+<li><a href="./Elemental_Chaos.html" title="Elemental Chaos" class="page">Elemental Chaos</a></li>
 <li><a href="./Happenings_and_Histories.html" title="Happenings and Histories" class="page">Happenings and Histories</a></li>
-<li><a href="./Immortals_and_Infernus_Arcanva.html" title="Immortals and Infernus Arcanva" class="page">Immortals and Infernus Arcanva</a></li>
+<li><a href="./Immortal.html" title="Immortal" class="page">Immortal</a></li>
+<li><a href="./Immortality_and_Infernus_Arcanva.html" title="Immortality and Infernus Arcanva" class="page">Immortality and Infernus Arcanva</a></li>
 <li><a href="./Infernus_Arcanva.html" title="Infernus Arcanva" class="page">Infernus Arcanva</a></li>
 <li><a href="./Jakarry.html" title="Jakarry" class="page">Jakarry</a></li>
+<li><a href="./Jao_Hong.html" title="Jao Hong" class="page">Jao Hong</a></li>
 <li><a href="./Lay_of_the_Land_of_Scales.html" title="Lay of the Land of Scales" class="page">Lay of the Land of Scales</a></li>
 <li><a href="./Magnificent_Hassan.html" title="Magnificent Hassan" class="page">Magnificent Hassan</a></li>
 <li><a href="./Memories,_Motives,_and_Missions.html" title="Memories, Motives, and Missions" class="page">Memories, Motives, and Missions</a></li>
 <li><a href="./Mercenary_Kingdoms.html" title="Mercenary Kingdoms" class="page">Mercenary Kingdoms</a></li>
-<li><a href="./Merchant_Marine.html" title="Merchant Marine" class="page">Merchant Marine</a></li>
 <li><a href="./Myth_and_Minutiae.html" title="Myth and Minutiae" class="page">Myth and Minutiae</a></li>
 <li><a href="./Orcus.html" title="Orcus" class="page">Orcus</a></li>
 <li><a href="./Overdale.html" title="Overdale" class="page">Overdale</a></li>
@@ -176,36 +178,60 @@
 <li><b>Prime Material</b></li>
 <li><a href="./Prohibitions_and_Proscriptions.html" title="Prohibitions and Proscriptions" class="page">Prohibitions and Proscriptions</a></li>
 <li><a href="./Queen_Serpentine.html" title="Queen Serpentine" class="page">Queen Serpentine</a></li>
+<li><a href="./Sacrilex.html" title="Sacrilex" class="page">Sacrilex</a></li>
+<li><a href="./Sentimentalos.html" title="Sentimentalos" class="page">Sentimentalos</a></li>
 <li><a href="./Setting_Suns_Warband.html" title="Setting Suns Warband" class="page">Setting Suns Warband</a></li>
-<li><a href="./Shadow_by_the_Boughs.html" title="Shadow by the Boughs" class="page">Shadow by the Boughs</a></li>
-<li><a href="./Shining_on_the_Sea.html" title="Shining on the Sea" class="page">Shining on the Sea</a></li>
 <li><a href="./Subterrania_and_the_Deep_Dark.html" title="Subterrania and the Deep Dark" class="page">Subterrania and the Deep Dark</a></li>
 <li><a href="./The_Arcanvan_Aeon.html" title="The Arcanvan Aeon" class="page">The Arcanvan Aeon</a></li>
-<li><a href="./The_Astral_Sea.html" title="The Astral Sea" class="page">The Astral Sea</a></li>
 <li><a href="./The_Balewoods.html" title="The Balewoods" class="page">The Balewoods</a></li>
 <li><a href="./The_Bleed.html" title="The Bleed" class="page">The Bleed</a></li>
 <li><a href="./The_Electric_Wizard.html" title="The Electric Wizard" class="page">The Electric Wizard</a></li>
+<li><a href="./The_Hassanian_Heresy.html" title="The Hassanian Heresy" class="page">The Hassanian Heresy</a></li>
 <li><a href="./The_Haze.html" title="The Haze" class="page">The Haze</a></li>
+<li><a href="./The_Longest_Night.html" title="The Longest Night" class="page">The Longest Night</a></li>
 <li><a href="./Tholdas_Moonbow.html" title="Tholdas Moonbow" class="page">Tholdas Moonbow</a></li>
-<li><a href="./Thunderous_Shore.html" title="Thunderous Shore" class="page">Thunderous Shore</a></li>
 <li><a href="./Towering_Terminole.html" title="Towering Terminole" class="page">Towering Terminole</a></li>
 <li><a href="./Triumvirate_of_Paragons.html" title="Triumvirate of Paragons" class="page">Triumvirate of Paragons</a></li>
 <li><a href="./Underdale.html" title="Underdale" class="page">Underdale</a></li>
-<li><a href="./Walmarie.html" title="Walmarie" class="page">Walmarie</a></li>
-<li><a href="./Warforged.html" title="Warforged" class="page">Warforged</a></li>
-<li><a href="./Zhin_Zhis.html" title="Zhin Zhis" class="page">Zhin Zhis</a></li>
+<li><a href="./Underseers.html" title="Underseers" class="page">Underseers</a></li>
 </ul>
  </div>
 		<div id="content">
 			<h1>Prime Material <a name='Prime Material'></a></h1>
 
-			
+			<p>
+Created Wednesday 28 June 2017
+</p>
+
+<p>
+The Prime Material has features very similar to our real world Earth, but our familiar laws of nature are bent in many ways by the fantastical setting and the presence of magic. The world is essentially spherical, but the furthest reaches of the Prime have "frayed" edges that can mix with other planes. There are also some spatial inconsistencies, such as entirely terrestrial passages that give access to the heavenly bodies in the sky. There is a day and night cycle and a Sun that almost always rises in the east and sets in the west. Noontime occurs at the apex of the Sun's orbit, with 24 hours between noontimes--in other words, a normal day. There are 360 days in the year, with four seasons of 90 days apiece. The seasons are similar to ours:
+</p>
+
+<p>
+Spring		Summer		Fall			Winter<br>
+Wet and hot	Dry and hot	Dry and cold	Wet and cold
+</p>
+
+<p>
+The dry seasons feature a companion star called Tholdas that orbits with the sun, on the southern side. There are solstices that occur on the first days of summer and winter, with the summer solstice being the long day. There are no days of the week, only numbered days per season, and days divisible by ten are usually observed as days of rest. The usual method of dating the current year is traditionally numbered according to the occupation of Conqueror's Road. Because of the high number of irregularities in the world's mechanics the date is usually moderated by an archivist or astronomer, but Hassan has done no such thing even once in his rule. Thus, the current year is around 31.278 going by informal reckonings of Hassan's ascension to the throne, though this is thought to be off by several hundred years. Sentimentalos offers a precise means of dating, but his count is according to the reign of Infernus, which is 155.753. Few common folk are aware of anything more than the current millenium, and the learned often have vague or conflicting dates. 
+</p>
+
+<h4>On Cartographical Difficulty</h4>
+
+<br>
+
+<p>
+Orientation is harder than in the real world. On Earth, and in the universe all around earth, things work more or less with constant stability. This is not so in the Land of Scales. Heavenly bodies follow unpredictable paths as they circle and whirl and blink, including the Sun which will rise in the north to set in the south on the days of highly significant events. Compasses would not work as the energies flowing through the Prime fluctuate endlessly and a tool such as a compass will only point toward whatever is currently the most powerful thing in the local region. Thus, the only means of navigation are maps, usually of low-quality, and trackers, hopefully of high-quality. An accurate and remotely up-to-date map is of an "artifact" variety of rarity, so travellers frequently rely on well-travelled rangers and the like who have proven themselves able to travel abroad and return safely. 
+</p>
+
 
 			<br>
 			<span class="backlinks">
 				<hr class='footnotes'>
 				<b>Backlinks:</b>
 				<a href='./Caracossam.html'>Caracossam</a>
+				
+				<a href='./Infernus_Arcanva.html'>Infernus Arcanva</a>
 				<br /><br />
 			</span>
 
